<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/selectableItemBackground"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtContentAlert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/alert"
            android:textColor="@color/textColorDarkBlue"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtTimeAlert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/_00_00"
            android:textColor="@color/textColorDarkBlue"
            android:textSize="35sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/txtDateAlert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/setiap_hari"
            android:textColor="@color/textColorDarkBlue"
            android:textSize="15sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/SCStatusAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="15dp"
        android:thumb="@drawable/custom_switch_thumb"
        app:showText="false"
        app:track="@drawable/custom_switch_track"/>

</LinearLayout>