<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="15dp"
    android:background="@drawable/bg_rounded_white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/LLHeaderDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/bgColorDarkBlue"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/txtTitleDialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/upload_video"
            android:textColor="@color/textColorWhite"
            android:textSize="17sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/IVIconDialog"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:src="@drawable/icon_upload"
            tools:ignore="ContentDescription"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/IVLoadingDialog"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginEnd="15dp"
            android:src="@drawable/img_loading"
            tools:ignore="ContentDescription"/>

        <TextView
            android:id="@+id/txtMessageDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/proses_upload_sedang_berlangsung"
            android:textColor="@color/textColorLightBlue"
            android:textSize="15sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLDeterminateDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/PBLoadingDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="false"
            android:progress="50"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>

        <TextView
            android:id="@+id/txtProgressDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:text="@string/_50"
            android:textColor="@color/textColorLightBlue"
            android:textSize="12sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/LLActionDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancelDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackground"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/batal"
            android:textColor="@color/textColorLightBlue"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="end"
            android:orientation="horizontal"
            tools:ignore="ButtonStyle">

            <Button
                android:id="@+id/btnNegativeDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?attr/selectableItemBackground"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/tidak"
                android:textColor="@color/textColorLightBlue"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btnPositiveDialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?attr/selectableItemBackground"
                android:backgroundTint="@android:color/transparent"
                android:text="@string/ya"
                android:textColor="@color/textColorLightBlue"
                android:textSize="15sp"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>