<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bg_main"
    android:orientation="vertical"
    tools:context=".features.videos.VideosActivity">

    <ImageView
        android:layout_width="125dp"
        android:layout_height="95dp"
        android:layout_gravity="center"
        android:layout_marginTop="17dp"
        android:src="@drawable/img_logo"
        tools:ignore="ContentDescription"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:gravity="center_horizontal"
        android:text="@string/kelola_video"
        android:textColor="@color/textColorWhite"
        android:textSize="18sp"
        android:textStyle="italic"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/bg_rounded_white"
            android:orientation="vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingTop="25dp"
            android:paddingBottom="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/IVUploadVideo"
                    android:layout_width="match_parent"
                    android:layout_height="170dp"
                    android:background="@color/bgColorGray"
                    android:padding="25dp"
                    android:src="@drawable/img_videos"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/txtDurationVideo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/IVUploadVideo"
                    android:background="@color/bgColorTransparentBlack"
                    android:paddingStart="0dp"
                    android:paddingEnd="5dp"
                    android:text="@string/_00_00"
                    android:textColor="@color/textColorWhite"
                    android:textSize="15sp"
                    app:drawableStartCompat="@drawable/icon_play"/>

                <ImageButton
                    android:id="@+id/IBDeleteVideo"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_alignEnd="@id/IVUploadVideo"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/icon_close"
                    android:tooltipText="@string/hapus_video"
                    app:tint="@color/bgColorDarkBlue"
                    tools:ignore="ContentDescription,UnusedAttribute"/>

            </RelativeLayout>

            <Button
                android:id="@+id/btnUploadVideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/bgColorDarkBlue"
                android:drawableStart="@drawable/icon_videos"
                android:text="@string/pilih_video"
                android:textAllCaps="true"
                android:textColor="@color/textColorWhite"
                android:textSize="20sp"
                android:textStyle="italic"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_rounded_white"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="17dp"
                android:paddingBottom="10dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/RVActiveVideo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_rounded_blue"
                android:paddingStart="7dp"
                android:paddingEnd="7dp"
                android:text="@string/video_aktif"
                android:textColor="@color/textColorWhite"
                android:textSize="15sp"
                android:textStyle="italic"
                tools:ignore="RelativeOverlap"/>

            <LinearLayout
                android:id="@+id/LLMenuActiveVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/bg_rounded_blue"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageButton
                    android:id="@+id/IBDeleteActiveVideo"
                    android:layout_width="30dp"
                    android:layout_height="17dp"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/icon_delete"
                    android:tooltipText="@string/hapus_video"
                    tools:ignore="ContentDescription,UnusedAttribute"/>

                <ImageButton
                    android:id="@+id/IBArchiveVideo"
                    android:layout_width="30dp"
                    android:layout_height="17dp"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/icon_archive"
                    android:tooltipText="@string/arsipkan_video"
                    tools:ignore="ContentDescription,UnusedAttribute"/>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_rounded_white"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="17dp"
                android:paddingBottom="10dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/RVArchiveVideo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_rounded_blue"
                android:paddingStart="7dp"
                android:paddingEnd="7dp"
                android:text="@string/video_arsip"
                android:textColor="@color/textColorWhite"
                android:textSize="15sp"
                android:textStyle="italic"
                tools:ignore="RelativeOverlap"/>

            <LinearLayout
                android:id="@+id/LLMenuArchiveVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/bg_rounded_blue"
                android:orientation="horizontal"
                android:padding="5dp">

                <ImageButton
                    android:id="@+id/IBDeleteArchiveVideo"
                    android:layout_width="30dp"
                    android:layout_height="17dp"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/icon_delete"
                    android:tooltipText="@string/hapus_video"
                    tools:ignore="ContentDescription,UnusedAttribute"/>

                <ImageButton
                    android:id="@+id/IBActiveVideo"
                    android:layout_width="30dp"
                    android:layout_height="17dp"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/icon_unarchive"
                    android:tooltipText="@string/buka_arsip_video"
                    tools:ignore="ContentDescription,UnusedAttribute"/>

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp">

            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:background="@drawable/bg_rounded_white"
                android:gravity="center_horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:paddingTop="17dp"
                android:paddingBottom="10dp">

                <ImageButton
                    android:id="@+id/IBUnmuteVideo"
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/icon_volume_up"
                    android:tooltipText="@string/bunyikan_video"
                    app:tint="@color/bgColorGray"
                    tools:ignore="ContentDescription,UnusedAttribute"/>

                <ImageButton
                    android:id="@+id/IBMuteVideo"
                    android:layout_width="40dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:src="@drawable/icon_volume_off"
                    android:tooltipText="@string/bisukan_video"
                    app:tint="@color/bgColorGray"
                    tools:ignore="ContentDescription,UnusedAttribute"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_rounded_blue"
                android:paddingStart="7dp"
                android:paddingEnd="7dp"
                android:text="@string/pengaturan_video"
                android:textColor="@color/textColorWhite"
                android:textSize="15sp"
                android:textStyle="italic"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>